# cherry-bot

./: .gitignore  README.md
src/cherry_bot_description/: CMakeLists.txt  package.xml
src/cherry_bot_description/sdf/: model.config
src/cherry_bot_description/urdf/: cherry_bot.gv  model.urdf
src/cherry_bot_gazebo/: CMakeLists.txt  package.xml
src/cherry_bot_gazebo/launch/: cherry_bot.launch.py
src/cherry_bot_gazebo/rviz/: cherry_bot.rviz
src/cherry_bot_gazebo/worlds/: test.world
src/cherry_bot_moveit_config/: CMakeLists.txt  package.xml
src/cherry_bot_moveit_config/config/: cherry_bot.srdf  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
src/cherry_bot_moveit_config/config_old/: joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
src/cherry_bot_moveit_config/launch/: cherry_bot_moveit.launch.py  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
src/cherry_bot_moveit_config/launch_old/: cherry_bot_moveit.launch.py  moveit_controller_manager.launch.xml
src/cherry_bot_moveit_config/rviz/: moveit.rviz
